# amiduino

./: .gitignore  .gitmodules  README.md
3dprinting/: calibration.md
3dprinting/bambustudio/: ASAPrinting.md  compile.md  ironing.md
3dprinting/ender3v3se/: FirmwareUpdate.md  GantrySupport.md  InputShaping.md  PrinterInfo.md  TimingPulleyFix.md
3dprinting/freecad/: 2020Profiles.md  EditingSTLs.md  HeatInserts.md  LinearRails.md  README.md  Scews.md  multi-color-parts.md
3dprinting/klipper/: automatic_zoffset.md  backup_sdcardimage.md  bed_mesh.md  development.md  ender3v3se_setup.md  input_shaping.md  klipper_setup_archlinux.md  running_klipper_bluepill.md
3dprinting/octoprint/: README.md  wifi-start.service
3dprinting/orcaslicer/: PrintingASA.md  Support.md  Tips.md  UnderstandOrcaQuality.md  automatic-nozzle-cleaning.md  compilation.md  filament_tests.md  flow-ratio-calibration.md  holes_compensation.md  ironing.md  nuts_bolts.md  retraction_test.md
arch/: notes.txt
arduino/IR/: IRReciever-Decode.ino
arduino/ST7735/: README.md  hw_spi.ino
arduino/blink/: blink.ino
arduino/bluetooth/AT/: AT.ino
arduino/fan/: myfan.txt
arduino/games/snake-game/: v1.cpp
arduino/hc05/: README.md
arduino/hc05/at_commands/: at_commands.ino
arduino/hc165/: hc165.ino
arduino/hc165n/: hc165n.ino
arduino/i2c/i2c-bitbang-avr/: i2c-bitbang-avr.ino
arduino/i2c/i2c-bitbang-slave/: i2c-bitbang-slave.ino
arduino/i2c/ina291/: main.ino
arduino/i2c/oled/: oled.ino
arduino/ili3941/: simple.ino  test.ino
arduino/ili3941/test/: test.ino
arduino/pin/: digitalpinblink.ino
arduino/serial/: readFromSerial.cpp
arduino/servo/: servo.ino
arduino/thermistor/: thermistor10k.ino
arduino/ws2812/: ws2812.ino
avr/: .gitignore
avr/Blink_AVR/: Blink_AVR.c  flash.sh
avr/ami-arduino-cmake/: .gitignore  CMakeLists.txt  README.md  build.sh  config.cmake
avr/ami-arduino-cmake/cmake/: avr-arduino-toolchain.cmake
avr/ami-arduino-cmake/sketches/esp8266-temp-delhi/: CMakeLists.txt  temp.cpp
avr/ami-arduino-cmake/sketches/esp8266-thingspeak-plot/: CMakeLists.txt  thingspeak.cpp
avr/ami-arduino-cmake/sketches/esp8266-wind-speed/: CMakeLists.txt  wind_speed.cpp
avr/ami-arduino-cmake/sketches/segdisplay/: CMakeLists.txt
avr/ami-atmega16-cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  config.cmake
avr/ami-atmega16-cmake/cmake/: avr-arduino-toolchain.cmake
avr/ami-atmega16-cmake/sketches/kitchen_timer/: CMakeLists.txt  Makefile  kitchen-timer.cpp
avr/arduino-nano-cmake/: CMakeLists.txt  config.cmake
avr/arduino-nano-cmake/sketches/Animator/: CMakeLists.txt  animator.cpp  animator.h  main.cpp  upload.sh
avr/arduino-nano-cmake/sketches/irsenddemo/: CMakeLists.txt  irsendsamsung.cpp  upload.sh
avr/arduinomega2560/: README.md
avr/asm/: README.md  README.txt
avr/atmega16a-cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
avr/attiny10/: README.txt
avr/attiny13a/softuart/: blink.c  meson.build  uart.h
avr/workspace/: .gitignore  README.md
cnc/: MakingPCBs.md  README.md
cnc/pcb_support/: PCB_Support_Long.stl  PCB_Support_Long_modified-Body.step  PCB_Support_Long_modified.FCStd  PCB_Support_Nut.stl  PCB_Support_Short.stl  README.md
electronics/lab-items-list/: lablag.py  lablag.sqlite
electronics/wires/: awg.py
esp/: README.md
esp/esp01/: pins.txt
esp/esp12e/: README.md
esp/esp32/: README.md
esp/esp32-c3/: README.md
esp12e/: README.md
fpga/: README.md
fpga/cyclone4/: .gitignore  README.md  create_new_project.sh
fpga/verilog/: README.md  comparator.v  simcomp.v
gui/kivy/: .gitignore
lib/7segLed/: README.md  Seg7Led.cpp  Seg7Led.h
lib/Morse/: Morse.cpp  Morse.h
ltspice/: INSTALL.md
ltspice/Eload/: Op-AmpDrivingNMos.asc  Op-AmpDrivingNMos.op.raw  Op-AmpDrivingNMos.raw
ltspice/basic/: FunctionGeneratorPeakDetectorCkt.asc  NegativePeakDetectorOpAmp.asc  OPA2604.lib  OpAmpCurrentBoosting.asc  OpAmpCurrentBoosting.net  OpAmpGainControlPNP.asc  Opa2604OffsetVoltageTest.asc  PeakDetectorOpAmp.asc  PeakDetectorOpamp2.asc  PeakDetectorSimple.asc  basic.asc  non-inverting-opamp.asc
pcb/: README.txt
pico/helloworld/: .gitignore  CMakeLists.txt  main.c
rigol/: printrigol.sh
rpi2/: README.md
rpi2/BrotherPrinterWifi/: brgenprintml2pdrv-4.0.0-1.armhf.deb  brotherHLB2000DWifiSetup.md  hlb2000dpdrv-4.0.0-1.i386.deb
samples/IR/: TV-Off-raw.ino
samples/SDCard/: SDCard.ino
samples/ST7735/: low_speed_sw_spi.ino
samples/display/: Seg7Led.ino
samples/esp8266/: esp8266-temp-weather-station-new-delhi.ino
samples/hc05/: README.md
samples/interrupts/: int0.cpp  int1.cpp
samples/kitchen-timer/: kitchen-timer.cpp
samples/serial/: readFromSerial.cpp
stm32/: README.md
stm32/blink/: hello.c  hello.ld
stm32/blink2/: skeleton.c
stm32/blink_bluepill/: platformio.ini
stm32/echo/: Makefile
stm32/platformio/: README.md
stm32/skeleton/: libopencm3-examples-rules.mk  skeleton.c
stm32/stm32cube/: .gitignore  README.md
stm32/switch_read/: skeleton.c
stm32/timer/: Makefile
stm32/uart/: skeleton.c
stm32/usart-printf/: libopencm3-examples-rules.mk  skeleton.c
uboot/: README.md
uboot/qemu_versatileboard/: README.md  compile.sh  startup.s  test.elf  test.ld  test.uimg
uboot/uboot_basic_qemu/: Links.md  compile_kernel.sh  convert_raw.sh  kernel.elf  start.S
uboot/uboot_qemu_arm64/: README.md
ubuntu/: add_downloaded_app_into_ui.md
udevrules/: 99-dfu.rules  README.md  blackmagicpro.rules  ch341.rules  cp2102.rules
xbm/: Clear.xbm  Cloudy.xbm  Distant Precipitation.xbm  Drifting Snow.xbm  Heavy Snow.xbm  Light Drizzle.xbm  Light Rain.xbm  Light Rainshower.xbm  Light Snow Pellets.xbm  Light Snow.xbm  Mainly Clear.xbm  Mainly Sunny.xbm  Mostly Cloudy.xbm  Partly Cloudy.xbm  Rain.xbm  Sunny.xbm  Sunny1.xbm  Thunder.xbm  active.xbm  clear.xbm  cloud.xbm  inactive.xbm  temp.xbm  temp2.xbm  tokyo.xbm  usb.xbm  wifi.xbm
zephyr/black_pill/cpp_blinky/: CMakeLists.txt  README.txt  prj.conf
zephyr/black_pill/cpp_blinky/boards/: stm32f103_min.overlay
zephyr/black_pill/cpp_blinky/src/: main.cpp
(+853 files in other folders)
